<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEstudianteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ETnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:hint="@string/nombre"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ETdocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:hint="@string/documento"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ETedad"
            android:hint="@string/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ETemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ETcelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:hint="@string/celular"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ETprograma"
            android:hint="@string/programa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40px"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSaludar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40px"
                android:layout_weight="1"
                android:onClick="actividadSaludar"
                android:text="@string/saludar"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSalirA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40px"
                android:layout_weight="1"
                android:onClick="salir"
                android:text="@string/salir"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>