<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearProfesorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingTop="50dp">

        <EditText
            android:id="@+id/txtDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/documento"
            android:gravity="center"
            android:inputType="number"/>

        <EditText
            android:id="@+id/txtNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profesion"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/programa"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salir"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="guardar"
                android:text="@string/guardar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>